--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,6 @@ spring:
 mybatis:
   configuration:
     # 指定mybatis日志输出到控制台
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl 
+    #log-impl: org.apache.ibatis.logging.stdout.StdOutImpl 
     # 驼峰命名
     map-underscore-to-camel-case: true
