--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
             <artifactId>json</artifactId>
             <version>20240303</version>
         </dependency>
+
+		<dependency>
+			<groupId>org.jsoup</groupId>
+    		<artifactId>jsoup</artifactId>
+    		<version>1.15.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
