--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
     		<artifactId>jsoup</artifactId>
     		<version>1.15.4</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
